ecmascript/parser/tests/test262-error-references/fail/0a225effb5493c00.js.stderr
error: Expected ;, got numeric literal
 --> $DIR/tests/test262-parser/fail/0a225effb5493c00.js:1:15
  |
1 | for (const of 42);
  |               ^^

